[package]
name = "aesus"
version = "0.2.0"
edition = "2021"
authors = ["Andrew Garcia"]
description = "A lean, secure AES-256 encryption tool with a CLI."
license = "MIT"
repository = "https://github.com/andrewrgarcia/aesus"
readme = "README.md"                # Optional but recommended
keywords = ["aes", "cli", "encryption", "decryption", "rust"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
pbkdf2 = "0.11"
hmac = { version = "0.12", features = ["std"] }
sha2 = { version = "0.10", features = ["std"] }